# bin

./: .envrc  .gitignore  Cargo.toml  Cross.toml  README.md  design.md  dev.sh  dist.sh  package.json  run.sh  test.coffee
.github/workflows/: dist.yml  docker.yml
bgu/: Cargo.toml
bgu/src/: lib.rs
log/: 0.1.119.md  0.1.48.md  0.1.54.md  0.1.57.md  0.1.71.md
sh/: RUSTFLAGS.sh  bin.dist.sh  conf.sh  conf.tar.zstd.enc  cross.sh  denc.sh  dist.gh.sh  dist.sh  down.yml  git.config  initos.sh  rcp.sh  ver.sh  zigbuild.sh
sh/cross/: build.sh  mv.sh
sh/cross/docker/: build.sh  push.sh  target.sh
src/: main.rs  mirror.rs  url.rs
