workspace = { members = ["bgu"] }

[package]
edition = "2021"
name = "i18"
version = "0.1.142"
license = "Apache-2.0"
repository = "https://github.com/i18n-site/bin.git"
homepage = "https://github.com/i18n-site/bin"
description = "i18"

[[bin]]
name = "i18n"
path = "src/main.rs"

[dependencies]
aok = "0.1.3"
bgu = { version = "0.1.0", path = "bgu" }
clap = { version = "4.4.18", features = ["cargo"] }
current_platform = "0.2.0"
iget = "0.1.5"

[dev-dependencies]

[features]

[profile.release]
lto = true
opt-level = 3
incremental = true
codegen-units = 1
overflow-checks = false
panic = 'abort'
debug-assertions = false
strip = true

[profile.dev]
split-debuginfo = "unpacked"

[patch.crates-io]
ring = { git = "https://github.com/sj6219/ring.git", branch = "0.16.20_alpha" }